--- a/views/views.xml
+++ b/views/views.xml
@@ -1,4 +1,4 @@
-<odoo>
+<flectra>
   <data>
     <!-- explicit list view definition -->
     <!--
@@ -57,4 +57,4 @@
               action="default_setting_for_indonesian_app.action_server"/>
     -->
   </data>
-</odoo>
+</flectra>
